<resources>
    <string name="app_name">TakeOut</string>

    #========================================提 示 语===============================================

    <string name="nonet">没有网络，请检查网络</string>
    <string name="generic_server_down">网络数据异常，请重试</string>
    <string name="request_time_out">网络请求超时，请重试</string>
    <string name="network_hint">您的网络不给力，请检查网络设置</string>
    <string name="fail_to_connected">网络连接失败</string>
    <string name="man">先生</string>
    <string name="woman">女士</string>
    <string name="delect_address">删除地址</string>
    <string name="sure_delect_address">确定要删除地址吗？</string>
    <string name="edit_user">请填写联系人</string>
    <string name="edit_user_phone">请填写手机号码</string>
    <string name="edit_validity_phone">请填写有效的手机号</string>
    <string name="edit_user_address">请填写收货地址</string>
    <string name="edit_user_detail_address">请填写详细地址</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="choose_label">选择标签</string>
    <string name="should_add_address">您需要填写一个地址</string>
    <string name="contactperson">联系人</string>
    <string name="test_push">订单列表第一条数据订单状态已更新</string>
    <string name="no_login">您还未登录</string>
    <string name="update_error">修改本地数据异常</string>
    <string name="add_error">添加操作失败</string>
    <string name="choose_address">请选择配送地址</string>
    #=========================================首  页================================================
    <string name="homeAddress">河南省漯河市召陵区</string>
    <string name="homeSearchHint">输入商家、商品名称</string>



    #=========================================订  单================================================

    <string name="order_ps">测试</string>
    <string name="order_this_order">第%1$s号订单</string>
    <string name="order_pay_surplus_time">支付剩余时间：%1$d分%2$d秒</string>
    <string name="order_no_pay">待支付</string>
    <string name="order_add_address">新增地址</string>
    <string name="order_name">请填写收货人姓名</string>

    #=========================================个  人================================================

    <string name="user_ps">测试</string>
    <string name="user_login_success">登录成功</string>
    <string name="user_edit_address">修改地址</string>
    <string name="user_add_address">新增地址</string>

    #=========================================更  多================================================

    <string name="more_ps">测试</string>
    <string name="order_shop_car">购物车</string>





</resources>
